--- a/appstate.json
+++ b/appstate.json
@@ -1,101 +1,128 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261561705381705%22%3A%22pzEGBPKb%22%2C%2261561898167675%22%3A%22dwYQ5rMn%22%2C%22100028419801106%22%3A%22BrAwgbxr%22%2C%2261562712970705%22%3A%22sxUz6IPN%22%2C%2261562434290466%22%3A%22ktHWF0tj%22%2C%2261558806076686%22%3A%225Xjyo541%22%2C%2261562335250325%22%3A%22BpGPMihs%22%2C%2261564666543463%22%3A%22tWRHmsWv%22%2C%22100090637356408%22%3A%229Y1EUnSm%22%7D",
+        "value": "%7B%2261568615729158%22%3A%22wQGAE0Gw%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.118Z",
-        "lastAccessed": "2024-10-24T11:27:13.118Z"
-    },
-    {
-        "key": "sb",
-        "value": "tCp5ZtCk12BWI9RU96OFBUD_",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.118Z",
-        "lastAccessed": "2024-10-24T11:27:13.118Z"
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
     },
     {
         "key": "datr",
-        "value": "6Yu4ZtnIQC81wNX_GbFjQPze",
+        "value": "JQkPZvXfcPRNb3pbQfiYAs6s",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.118Z",
-        "lastAccessed": "2024-10-24T11:27:13.118Z"
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
     },
     {
-        "key": "vpd",
-        "value": "v1%3B708x360x2.5506443977355957",
+        "key": "sb",
+        "value": "JQkPZiwitjLqSQjfuqhV6I8Y",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.118Z",
-        "lastAccessed": "2024-10-24T11:27:13.118Z"
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
     },
     {
         "key": "m_pixel_ratio",
-        "value": "2.5506443977355957",
+        "value": "2",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.119Z",
-        "lastAccessed": "2024-10-24T11:27:13.119Z"
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
     },
     {
         "key": "wd",
-        "value": "423x832",
+        "value": "360x674",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.119Z",
-        "lastAccessed": "2024-10-24T11:27:13.119Z"
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
     },
     {
         "key": "c_user",
-        "value": "100090637356408",
+        "value": "61568615729158",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.119Z",
-        "lastAccessed": "2024-10-24T11:27:13.119Z"
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
     },
     {
         "key": "fr",
-        "value": "1SxYgavto5KxzM367.AWUnfhXE-ecieC8XPPnLD2rAjG4.Bmy9qz..AAA.0.0.BnGi8A.AWXfODv0COk",
+        "value": "0woM3XtJ2b2lj1S1r.AWWvqw414m4cJTOBrv5arhvIqWc.BnMks0..AAA.0.0.BnMkuO.AWUUnIk6ph8",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.119Z",
-        "lastAccessed": "2024-10-24T11:27:13.119Z"
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
     },
     {
         "key": "xs",
-        "value": "40%3A78le-AmpDsU1-Q%3A2%3A1729769217%3A-1%3A-1",
+        "value": "13%3AfvICAq0bFiIQdw%3A2%3A1731349392%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.119Z",
-        "lastAccessed": "2024-10-24T11:27:13.119Z"
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
+    },
+    {
+        "key": "locale",
+        "value": "hi_IN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
     },
     {
         "key": "fbl_st",
-        "value": "101037455%3BT%3A28829487",
+        "value": "100624592%3BT%3A28855823",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.119Z",
-        "lastAccessed": "2024-10-24T11:27:13.119Z"
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B674x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2655%3Btimestamp%3A1729769225",
+        "value": "v2%3Bclient_version%3A2670%3Btimestamp%3A1731349408%3BCRCM%3A1022569974",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T11:27:13.119Z",
-        "lastAccessed": "2024-10-24T11:27:13.119Z"
+        "creation": "2024-11-11T18:38:53.902Z",
+        "lastAccessed": "2024-11-11T18:38:53.902Z"
     }
 ]
